--- a/Circulars/Documents/MFMA Circular 100 - Emergency Procurement in Response to COVID-19 - Dated 19 March 2020/index.html
+++ b/Circulars/Documents/MFMA Circular 100 - Emergency Procurement in Response to COVID-19 - Dated 19 March 2020/index.html
@@ -13,22 +13,22 @@ table_items:
   modified_date: 3/20/2020 4:06 PM
   path: https://archive.org/details/in_response_to_covid-19_-_dated_19_march_2020_annexure_a_table_1_items_on_transversal_contracts_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: Annexure A Table 2 Items NOT on Transversal Contracts
   modified_date: 3/20/2020 4:06 PM
   path: https://archive.org/details/response_to_covid-19_-_dated_19_march_2020_annexure_a_table_2_items_not_on_transversal_contracts_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: Annexure B Covid 19  Supplier Contact Details
   modified_date: 3/20/2020 4:06 PM
   path: https://archive.org/details/ement_in_response_to_covid-19_-_dated_19_march_2020_annexure_b_covid_19_supplier_contact_details_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 - label: MFMA Circular 100 - Emergency Procurement in Response to COVID-19 Pandemic
   modified_date: 3/20/2020 4:06 PM
   path: https://archive.org/details/dated_19_march_2020_mfma_circular_100_-_emergency_procurement_in_response_to_covid-19_pandemic_pdf
   type: table_form_item
-  user: Jacques Engelbrecht
+  user: ''
 title: null
 
 ---
